Fixes for high-contrast mode
Fixes AB#662, AB#941

--- a/src/@batch-flask/ui/buttons/button.scss
+++ b/src/@batch-flask/ui/buttons/button.scss
@@ -160,3 +160,9 @@ bl-button {
         }
     }
 }
+
+@media (forced-colors: active) {
+    bl-button {
+        border: 1px solid currentColor;
+    }
+}
